--- a/articles/backup/index.yml
+++ b/articles/backup/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: dcurwin
   ms.author: dacurwin
   ms.date: 12/01/2019
-  ms.openlocfilehash: f78a311125340f447cb0f2dda960e34c289c123a
-  ms.sourcegitcommit: 271601d3eeeb9422e36353d32d57bd6e331f4d7b
+  ms.openlocfilehash: eeca42ea748c10970f312a84ea32c53fb904344a
+  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88650844"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90974445"
 landingContent:
 - title: Azure Backup について
   linkLists:
@@ -56,12 +56,14 @@ landingContent:
   linkLists:
   - linkListType: whats-new
     links:
+    - text: バックアップ センター
+      url: backup-center-overview.md
+    - text: Azure Database for PostgreSQL のバックアップ
+      url: backup-azure-database-postgresql.md
     - text: Azure Backup の論理的な削除
       url: backup-azure-security-feature-cloud.md
     - text: Azure VM 上の SQL Server のファイルとして復元
       url: restore-sql-database-azure-vm.md#restore-as-files
-    - text: Azure VM 上の SAP HANA データベースのバックアップ
-      url: backup-azure-sap-hana-database.md
 - title: Azure VM のバックアップ
   linkLists:
   - linkListType: concept
@@ -134,6 +136,8 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
+    - text: バックアップ センターを使用した大規模な管理
+      url: backup-center-monitor-operate.md
     - text: Azure Policy による大規模な管理
       url: backup-azure-auto-enable-backup.md
     - text: バックアップ エクスプローラーを使用した大規模な監視と操作
