--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -13,12 +13,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 549309a01602206b85a54b47df297735dfc5e709
-  ms.sourcegitcommit: 64ad2c8effa70506591b88abaa8836d64621e166
+  ms.openlocfilehash: bd1a0b2efb01d0db153bd666f8ff4e3911095702
+  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/17/2020
-  ms.locfileid: "88262604"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90984995"
 highlightedContent:
   items:
   - title: Azure Key Vault の概要
@@ -89,6 +89,20 @@ conceptualContent:
     footerLink:
       url: ./secrets/index.yml
       text: 詳細情報
+  - title: Managed HSM (プレビュー)
+    links:
+    - url: ./managed-hsm/overview.md
+      itemType: overview
+      text: Managed HSM とは
+    - url: ./managed-hsm/best-practices.md
+      itemType: overview
+      text: ベスト プラクティス
+    - url: ./managed-hsm/quick-create-cli.md
+      itemType: quickstart
+      text: マネージド HSM のプロビジョニングとアクティブ化
+    footerLink:
+      text: 詳細情報
+      url: ./managed-hsm/index.yml
   - title: クライアント ライブラリ
     links:
     - url: ./general/client-libraries.md
