--- a/articles/azure-arc/servers/index.yml
+++ b/articles/azure-arc/servers/index.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Landing
-title: Azure Arc サーバー (プレビュー)
-summary: Azure Arc サーバー
+title: Azure Arc 対応サーバー
+summary: Azure Arc 対応サーバー
 metadata:
-  title: Azure Arc サーバー
+  title: Azure Arc 対応サーバー
   description: Azure でオンプレミスのマシンを管理する方法について説明します
   author: mgoedtel
   ms.service: azure-arc
   ms.topic: landing-page
   ms.date: 06/26/2020
   ms.author: magoedte
-  ms.openlocfilehash: 9080f5bb770f5cb86284b5816c340a614843038c
-  ms.sourcegitcommit: e2b36c60a53904ecf3b99b3f1d36be00fbde24fb
+  ms.openlocfilehash: f03e869e884fff8a1d196817b658c28bbdc55ca9
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/24/2020
-  ms.locfileid: "88763815"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90908115"
 landingContent:
 - title: Azure Arc 対応サーバーを使用してマシンを Azure に接続する
   linkLists:
@@ -22,7 +22,7 @@ landingContent:
     links:
     - text: Azure Arc 対応サーバーとは
       url: overview.md
-  - linkListType: quickstart
+  - linkListType: get-started
     links:
     - text: Azure portal から Azure Arc へのマシンの接続
       url: onboard-portal.md
@@ -30,3 +30,9 @@ landingContent:
       url: onboard-service-principal.md
     - text: PowerShell DSC を使用してマシンを Azure に接続する
       url: onboard-dsc.md
+- title: 10 分間のクイック スタート
+  linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Arc 対応サーバー エージェントをデプロイする
+      url: ./learn/quick-enable-hybrid-vm.md
