--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -166,6 +166,22 @@ groups:
     title: C#
   - id: programming-language-go
     title: Go
+- id: programming-languages-set-sixteen
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-ruby
+    title: Ruby
 - id: cogsvcs-text-analytics-features
   title: Text Analytics の機能
   prompt: Text Analytics の機能オファリングの選択
@@ -206,6 +222,20 @@ groups:
     title: JavaScript
   - id: programming-language-other
     title: その他の言語
+- id: programming-languages-metrics-monitor
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する。
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-rest-api
+    title: REST API
 - id: programming-languages-set-diberry-3core
   title: プログラミング言語
   prompt: プログラミング言語を選択する
@@ -295,7 +325,7 @@ groups:
   - id: programming-language-cpp
     title: C++
   - id: programming-language-go
-    title: 移動
+    title: Go
   - id: programming-language-java
     title: Java
   - id: programming-language-python
@@ -365,7 +395,7 @@ groups:
   - id: programming-language-cpp
     title: C++
   - id: programming-language-go
-    title: 移動
+    title: Go
   - id: programming-language-java
     title: Java
   - id: programming-language-python
@@ -385,7 +415,7 @@ groups:
   - id: programming-language-cpp
     title: C++
   - id: programming-language-go
-    title: 移動
+    title: Go
   - id: programming-language-java
     title: Java
   - id: programming-language-python
@@ -403,7 +433,7 @@ groups:
   - id: programming-language-cpp
     title: C++
   - id: programming-language-go
-    title: 移動
+    title: Go
   - id: programming-language-java
     title: Java
   - id: programming-language-python
@@ -576,18 +606,132 @@ groups:
     title: C++
   - id: programming-language-java
     title: Java
-  - id: programming-language-python
-    title: Python
   - id: programming-language-javascript
     title: JavaScript
   - id: programming-language-go
     title: Go
+  - id: programming-language-python
+    title: Python
   - id: programming-language-spx
     title: CLI
+- id: acs-js-csharp
+  title: JS と C# のピボット
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-csharp
+    title: C#
+- id: acs-js-csharp-java-python
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+- id: acs-js-csharp-java-python-swift
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-swift
+    title: Swift
+- id: acs-js-csharp-ios-android-python
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-java-android
+    title: Java (Android)
+  - id: programming-language-ios
+    title: iOS
+  - id: programming-language-python
+    title: Python
+- id: acs-js-csharp-ios-android
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-java-android
+    title: Java (Android)
+  - id: programming-language-ios
+    title: iOS
+- id: acs-plat-web-net-ios-android
+  title: プラットフォーム
+  prompt: プラットフォームの選択
+  pivots:
+  - id: platform-net
+    title: .NET
+  - id: platform-web
+    title: Web
+  - id: platform-android
+    title: Android
+  - id: platform-ios
+    title: iOS
+- id: acs-plat-web-ios-android
+  title: プラットフォーム
+  prompt: プラットフォームの選択
+  pivots:
+  - id: platform-web
+    title: Web
+  - id: platform-android
+    title: Android
+  - id: platform-ios
+    title: iOS
+- id: acs-plat-azp-js
+  title: プラットフォーム
+  prompt: プラットフォームの選択
+  pivots:
+  - id: platform-azp
+    title: Azure portal
+  - id: platform-javascript
+    title: JavaScript
+- id: acs-plat-azp-net
+  title: プラットフォーム
+  prompt: プラットフォームの選択
+  pivots:
+  - id: platform-azp
+    title: Azure portal
+  - id: platform-net
+    title: .NET
+- id: acs-plat-azp-arm-net-python-go-powershell
+  title: プラットフォーム
+  prompt: プラットフォームの選択
+  pivots:
+  - id: platform-azp
+    title: Azure portal
+  - id: platform-arm
+    title: Azure Resource Manager
+  - id: platform-net
+    title: .NET
+  - id: platform-python
+    title: Python
+  - id: platform-go
+    title: Go
+  - id: platform-powershell
+    title: PowerShell
 metadata:
-  ms.openlocfilehash: ea50c8099a3b51a2796f26a8bad31f1209423efe
-  ms.sourcegitcommit: 7374b41bb1469f2e3ef119ffaf735f03f5fad484
+  ms.openlocfilehash: f55c7be76f2acf666d37db9618fa0303bf253e31
+  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/16/2020
-  ms.locfileid: "90707664"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90984246"
