--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -10,23 +10,29 @@ metadata:
   author: MGoedtel
   ms.author: magoedte
   ms.date: 08/21/2020
-  ms.openlocfilehash: 6dec6bb451e7a330138c9a2a65f2a7dec7202a6a
-  ms.sourcegitcommit: 8a7b82de18d8cba5c2cec078bc921da783a4710e
+  ms.openlocfilehash: a2bf337f5bcd5d4fb5810025b6d2aaa8da15201c
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/28/2020
-  ms.locfileid: "89051323"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90908244"
 highlightedContent:
   items:
+  - title: Azure Arc について
+    itemType: overview
+    url: overview.md
   - title: Azure Arc 対応サーバー (プレビュー)
     itemType: overview
     url: ./servers/overview.md
   - title: Azure Arc 対応 Kubernetes (プレビュー)
     itemType: overview
     url: ./kubernetes/overview.md
-  - title: Azure Arc について
+  - title: Azure Arc 対応データ サービス (プレビュー)
     itemType: overview
-    url: overview.md
+    url: ./data/overview.md
+  - title: Azure Arc 対応 SQL Server (プレビュー)
+    itemType: overview
+    url: https://docs.microsoft.com/en-us/sql/sql-server/
 productDirectory:
   title: Azure Arc 対応サービス
   summary: 場所を問わずサービスを実行する方法を参照してください。
@@ -43,13 +49,31 @@ productDirectory:
     - url: ./servers/index.yml
       text: さらに表示...
   - title: Azure Arc 対応 Kubernetes
-    imageSrc: ./media/containers-101-kubernetes-services.svg
+    imageSrc: ./media/01088-icon-arc-kubernetes-menu.svg
     links:
     - url: ./kubernetes/connect-cluster.md
       text: クラスターの接続
     - url: ./kubernetes/use-gitops-connected-cluster.md
       text: GitOps を使用して構成をデプロイする
     - url: ./kubernetes/index.yml
+      text: さらに表示...
+  - title: Azure Arc 対応データ サービス (プレビュー)
+    imageSrc: ./media/manage-756-azure-arc.svg
+    links:
+    - url: ./data/install-client-tools.md
+      text: ツールをインストールする
+    - url: ./data/create-sql-managed-instance.md
+      text: SQL マネージド インスタンスの作成
+    - url: ./data/create-postgresql-hyperscale-server-group.md
+      text: PostgreSQL Hyperscale の作成
+    - url: ./data/index.yml
+      text: さらに表示...
+  - title: Azure Arc 対応 SQL Server (プレビュー)
+    imageSrc: ./media/01850-icon-arc-sql-server-menu.svg
+    links:
+    - url: https://docs.microsoft.com/sql/sql-server/azure-arc/assess
+      text: SQL インスタンスの評価
+    - url: https://docs.microsoft.com/sql/sql-server/azure-arc/overview
       text: さらに表示...
 conceptualContent:
   title: 作業開始
