--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -768,6 +768,8 @@
                   href: ../dms/tutorial-mongodb-cosmos-db.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
                 - name: 移行後ガイド
                   href: mongodb-post-migration.md
+            - name: MongoDB 3.2 から 3.6 へのアップグレード
+              href: mongodb-version-upgrade.md
             - name: 接続文字列を取得する
               href: connect-mongodb-account.md
             - name: Studio 3T を使用して接続する
@@ -1108,7 +1110,7 @@
           href: how-to-migrate-from-change-feed-library.md
         - name: 変更フィード - Async Java のサンプル
           href: create-sql-api-java-changefeed.md
-    - name: Azure Synapse Link を使用した分析
+    - name: Azure Synapse Link を使用した分析と BI
       items:
         - name: Azure Synapse Link を構成する
           href: configure-synapse-link.md
@@ -1116,6 +1118,8 @@
           href: ../synapse-analytics/synapse-link/how-to-connect-synapse-link-cosmos-db.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
         - name: Azure Synapse Spark を使用してクエリを実行する
           href: ../synapse-analytics/synapse-link/how-to-query-analytical-store-spark.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
+        - name: Synapse Link で Power BI を使用する
+          href: synapse-link-power-bi.md
     - name: Apache Spark による組み込みの分析
       items:
         - name: Azure Databricks の Spark コネクタ
@@ -1198,12 +1202,16 @@
           href: monitor-cosmos-db-reference.md
         - name: Logic Apps を使用したアプリケーション ログ記録
           href: ../logic-apps/logic-apps-scenario-error-and-exception-handling.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
-    - name: ローカルでの開発
+    - name: エミュレーターを使用したローカル開発
       items:
-        - name: エミュレーターの使用
+        - name: エミュレーターのインストールと使用
           href: local-emulator.md
-        - name: 証明書のエクスポート
+        - name: エミュレーターの証明書のエクスポート
           href: local-emulator-export-ssl-certificates.md
+        - name: エミュレーターのコマンドライン パラメーター
+          href: emulator-command-line-parameters.md
+        - name: エミュレーターのトラブルシューティング
+          href: troubleshoot-local-emulator.md
         - name: Visual Studio Code 拡張機能
           href: 'https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-cosmosdb'
     - name: Azure DevOps CI/CD パイプラインの設定
