--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -45,13 +45,13 @@
   items:
     - name: ストレージ アカウント
       href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-    - name: Security
+    - name: セキュリティ
       items:
         - name: Azure Storage の保存時の暗号化
           href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
           items:
-            - name: Azure Key Vault でのカスタマー マネージド キー
-              href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+            - name: カスタマー マネージド キーを使用した暗号化
+              href: ../common/customer-managed-keys-overview.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
         - name: Azure Policy によるセキュリティ制御
           displayName: 'regulatory, compliance, standards, domains'
           href: ../common/security-controls-policy.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
@@ -104,17 +104,15 @@
           items:
             - name: 顧客管理キーをサポートするアカウントの作成
               href: ../common/account-encryption-key-create.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-            - name: 顧客管理キーの構成
+            - name: カスタマー マネージド キーによる暗号化を構成する
               items:
-                - name: ポータル
-                  href: ../common/storage-encryption-keys-portal.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-                - name: PowerShell
-                  href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-                - name: Azure CLI
-                  href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+                - name: カスタマー マネージド キーをキー コンテナーに格納する
+                  href: ../common/customer-managed-keys-configure-key-vault.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+                - name: カスタマー マネージド キーをマネージド HSM に格納する
+                  href: ../common/customer-managed-keys-configure-key-vault-hsm.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
             - name: アカウントの暗号化キー モデルの確認
               href: ../common/storage-encryption-key-model-get.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-            - name: ストレージ アカウントのインフラストラクチャの暗号化を有効にする
+            - name: アカウントのインフラストラクチャ暗号化を有効にする
               href: ../common/infrastructure-encryption-enable.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
         - name: クライアント側の暗号化の構成
           items:
@@ -136,6 +134,8 @@
                   href: ../common/transport-layer-security-configure-minimum-version.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
                 - name: クライアント アプリケーションの TLS バージョンを構成する
                   href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+        - name: 脅威保護のために Azure Defender を構成する
+          href: ../common/azure-defender-storage-configure.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
     - name: データの冗長性を管理する
       items:
         - name: データのレプリケート方法の変更
