--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -184,6 +184,8 @@
       items:
         - name: VPN ゲートウェイ用の BGP の構成
           items:
+            - name: Azure portal
+              href: bgp-howto.md
             - name: Azure PowerShell
               href: vpn-gateway-bgp-resource-manager-ps.md
             - name: Azure CLI
@@ -228,6 +230,8 @@
           href: create-zone-redundant-vnet-gateway.md
     - name: 接続に対する IPsec/IKE ポリシーの構成
       items:
+        - name: Azure portal
+          href: ipsec-ike-policy-howto.md
         - name: PowerShell
           href: vpn-gateway-ipsecikepolicy-rm-powershell.md
     - name: アクティブ/アクティブ接続の構成
