--- a/articles/cognitive-services/Computer-vision/breadcrumb/toc.yml
+++ b/articles/cognitive-services/Computer-vision/breadcrumb/toc.yml
@@ -1,11 +1,11 @@
 - name: Azure
-  tocHref: /DocsLegal/
+  tocHref: /legal/
   topicHref: /azure/index
   items:
     - name: Computer Vision
-      tocHref: /DocsLegal/computer-vision
+      tocHref: /legal/computer-vision
       topicHref: /azure/cognitive-services/Computer-vision/index
       items:
         - name: Computer Vision の空間分析
-          tocHref: /DocsLegal/cognitive-services/computer-vision/
+          tocHref: /legal/cognitive-services/computer-vision/
           topicHref: /azure/cognitive-services/Computer-vision/index
