commit translated contents

--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -47,7 +47,9 @@
       items:
         - name: エージェントの接続に関する問題
           href: troubleshoot-agent-onboard.md
-- name: 関連項目
+        - name: VM 拡張機能の問題
+          href: troubleshoot-vm-extensions.md
+- name: リファレンス
   items:
     - name: データの保存場所
       href: data-residency.md
