--- a/articles/active-directory/app-provisioning/toc.yml
+++ b/articles/active-directory/app-provisioning/toc.yml
@@ -78,7 +78,7 @@
     - name: SCIM エンドポイントの構築とプロビジョニングの構成
       href: use-scim-to-provision-users-and-groups.md
     - name: MS Graph を使用した構成の自動化
-      href: application-provisioning-configure-api.md
+      href: 'https://docs.microsoft.com/graph/application-provisioning-configure-api'
 - name: リファレンス
   items:
     - name: SCIM 2.0 プロトコルへの準拠
