--- a/articles/hpc-cache/toc.yml
+++ b/articles/hpc-cache/toc.yml
@@ -42,6 +42,8 @@
   items:
     - name: Azure CLI
       href: /cli/azure/ext/hpc-cache/hpc-cache
+    - name: Azure PowerShell
+      href: /powershell/module/Az.HPCCache
 - name: リソース
   items:
     - name: サポート チケットを開く
