commit translated contents

--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -81,6 +81,8 @@
       items:
         - name: ASP.NET
           href: tutorial-v2-asp-webapp.md
+        - name: Blazor サーバー
+          href: tutorial-blazor-server.md
     - name: モバイル アプリとデスクトップ アプリ
       items:
         - name: Android
