--- a/articles/private-link/toc.yml
+++ b/articles/private-link/toc.yml
@@ -24,6 +24,10 @@
     - name: Private Link サービスの作成 - Resource Manager テンプレート
       displayName: Resource Manager
       href: create-private-link-service-template.md
+- name: チュートリアル
+  items:
+    - name: ストレージ アカウントに接続する
+      href: tutorial-private-endpoint-storage-portal.md
 - name: 概念
   items:
     - name: プライベート エンドポイント
@@ -38,8 +42,6 @@
           href: security-baseline.md
 - name: 方法
   items:
-    - name: ストレージ アカウントに非公開で接続する
-      href: create-private-endpoint-storage-portal.md
     - name: Cosmos DB アカウントに非公開で接続する
       href: create-private-endpoint-cosmosdb-portal.md
     - name: Web アプリに非公開で接続する
