--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -4,7 +4,7 @@
   items:
     - name: Azure NetApp Files とは
       href: azure-netapp-files-introduction.md
-    - name: ストレージ階層の理解
+    - name: Azure NetApp Files のストレージ階層
       href: azure-netapp-files-understand-storage-hierarchy.md
 - name: クイックスタート
   expanded: true
@@ -61,6 +61,8 @@
       href: azure-netapp-files-create-netapp-account.md
     - name: 容量プールを設定する
       href: azure-netapp-files-set-up-capacity-pool.md
+    - name: 手動 QoS 容量プールを管理する
+      href: manage-manual-qos-capacity-pool.md
     - name: サブネットを Azure NetApp Files に委任する
       href: azure-netapp-files-delegate-subnet.md
     - name: NFS ボリュームの作成と管理
@@ -109,8 +111,12 @@
           href: azure-netapp-files-troubleshoot-resource-provider-errors.md
     - name: トラブルシューティング
       items:
+        - name: 容量プールのトラブルシューティング
+          href: troubleshoot-capacity-pools.md
         - name: リージョン間レプリケーションのトラブルシューティング
           href: troubleshoot-cross-region-replication.md
+        - name: スナップショット ポリシーのトラブルシューティング
+          href: troubleshoot-snapshot-policies.md
 - name: リファレンス
   items:
     - name: REST
