--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -31,6 +31,8 @@
       href: plan-monitoring-and-reporting.md
     - name: 監査ログ
       href: concept-audit-logs.md
+    - name: 新しいサインイン ログ - プレビュー
+      href: concept-all-sign-ins.md
     - name: サインイン ログ
       href: concept-sign-ins.md
     - name: 使用状況と分析情報のレポート
