--- a/articles/azure-sql-edge/toc.yml
+++ b/articles/azure-sql-edge/toc.yml
@@ -46,8 +46,8 @@
           href: disconnected-deployment.md
         - name: Kubernetes にデプロイする
           href: deploy-kubernetes.md
-        - name: SQL ツール
-          href: 'https://docs.microsoft.com/en-us/sql/tools/overview-sql-tools?toc=/azure/azure-sql-edge/toc.json'
+        - name: Azure Data Studio を使用したデプロイ
+          href: 'https://docs.microsoft.com/sql/azure-data-studio/deploy-azure-sql-edge?toc=/azure/azure-sql-edge/toc.json'
     - name: 機械学習
       items:
         - name: ONNX を使用した機械学習と AI
