--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -277,19 +277,19 @@
     - name: 支払いを受ける
       items:
         - name: 支払いを受ける
-          href: partner-center-portal/get-paid.md
+          href: /partner-center/marketplace-get-paid?context=/azure/marketplace/context/context
         - name: 支払いアカウントと税フォームを設定する
-          href: partner-center-portal/set-up-your-payout-account-tax-forms.md
-        - name: 支払いのしきい値、方法、期間
-          href: partner-center-portal/payment-thresholds-methods-timeframes.md
-        - name: 大まかな支払いの概要
-          href: partner-center-portal/payout-summary-overview.md
-        - name: 支払いの概要
-          href: partner-center-portal/payout-summary.md
+          href: /partner-center/set-up-your-payout-account?context=/azure/marketplace/context/context
+        - name: 支払いのしきい値と期間
+          href: /partner-center/payment-thresholds-methods-timeframes?context=/azure/marketplace/context/context
+        - name: 支払い明細
+          href: /partner-center/payout-statement?context=/azure/marketplace/context/context
         - name: 支払いポリシーの詳細
-          href: partner-center-portal/payout-policy-details.md
+          href: /partner-center/payout-policy-details?context=/azure/marketplace/context/context
         - name: 税の詳細
-          href: partner-center-portal/tax-details-paid-transactions.md
+          href: /partner-center/tax-details-marketplace?context=/azure/marketplace/context/context
+        - name: 支払いに関する FAQ
+          href: /partner-center/payout-faq?context=/azure/marketplace/context/context
     - name: CPP API リファレンス
       items:
         - name: 概要
