--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -273,6 +273,10 @@
             - name: Azure PowerShell
               href: howto-configure-server-parameters-using-powershell.md
               displayName: 'server parameters, powershell'
+        - name: サーバーを停止または起動する
+          items:
+            - name: MySQL サーバーを停止または起動する
+              href: how-to-stop-start-server.md
         - name: ストレージの自動拡張
           items:
             - name: Azure portal
@@ -480,7 +484,7 @@
           items:
             - name: Azure portal
               href: flexible-server/how-to-configure-high-availability.md
-        - name: ネットワーキング
+        - name: ネットワーク
           items:
             - name: プライベート アクセス (VNet 統合)
               items:
