--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -145,6 +145,8 @@
       href: ../../network-watcher/security-baseline.md
     - name: Security Center のベースライン
       href: ../../security-center/security-baseline.md
+    - name: Service Bus のベースライン
+      href: ../../service-bus-messaging/security-baseline.md
     - name: Service Fabric のベースライン
       href: ../../service-fabric/security-baseline.md
     - name: Stream Analytics のベースライン
