--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -27,6 +27,8 @@
       href: roles.md
     - name: 高度なマルチステージ攻撃の検出
       href: fusion.md
+    - name: 独自の機械学習プラットフォームを使用する
+      href: bring-your-own-ml.md
     - name: ワークスペースおよびテナント全体での Azure Sentinel の拡張
       href: extend-sentinel-across-workspaces-tenants.md
     - name: UEBA を使用した高度な脅威の特定
@@ -66,6 +68,8 @@
               href: connect-microsoft-defender-advanced-threat-protection.md
             - name: Microsoft Defender for Identity (旧称 Azure ATP)
               href: connect-azure-atp.md
+            - name: Microsoft Defender for Office 365 (旧称 Office 365 ATP)
+              href: connect-office-365-advanced-threat-protection.md
             - name: Azure DDoS Protection
               href: connect-azure-ddos-protection.md
             - name: Azure Firewall
