--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -214,6 +214,9 @@
         - name: vCPU のクォータ
           href: ../virtual-machines/windows/quotas.md
           maintainContext: true
+    - name: 作成または更新操作の PUT 呼び出し
+      href: ../virtual-machines/put-calls-create-or-update.md
+      maintainContext: true
     - name: スケール セットの FAQ
       href: virtual-machine-scale-sets-faq.md
 - name: 操作方法
@@ -274,6 +277,8 @@
             - name: カスタマー マネージド キーの使用
               displayName: 'SSE, CMK, encrypt'
               href: ../virtual-machines/image-version-encryption.md
+            - name: 共有のためのアプリの登録
+              href: share-images-across-tenants.md
     - name: テンプレートの作成
       items:
         - name: スケール セット テンプレートを確認する
@@ -326,6 +331,15 @@
           href: virtual-machine-scale-sets-placement-groups.md
         - name: スケール セット テンプレートを変換してマネージド ディスクを使用する
           href: virtual-machine-scale-sets-convert-template-to-md.md
+        - name: 専用ホストの使用 (プレビュー)
+          href: ../virtual-machines/dedicated-hosts.md
+          items:
+            - name: CLI
+              href: ../virtual-machines/linux/dedicated-hosts-cli.md
+            - name: PowerShell
+              href: ../virtual-machines/windows/dedicated-hosts-powershell.md
+            - name: ポータル
+              href: ../virtual-machines/dedicated-hosts-portal.md
         - name: スポット インスタンスを使用する
           href: use-spot.md
     - name: 管理する
@@ -358,18 +372,6 @@
           href: virtual-machine-scale-sets-scale-in-policy.md
         - name: 削除時の終了通知
           href: virtual-machine-scale-sets-terminate-notification.md
-        - name: 共有イメージ ギャラリー
-          items:
-            - name: 概要
-              href: shared-image-galleries.md
-            - name: CLI
-              href: shared-images-cli.md
-            - name: PowerShell
-              href: shared-images-powershell.md
-            - name: テナントをまたいでイメージを共有する
-              href: share-images-across-tenants.md
-            - name: 共有イメージのトラブルシューティングを行う
-              href: troubleshooting-shared-images.md
         - name: 近接通信配置グループの作成
           href: proximity-placement-groups.md
         - name: スケール セットの垂直スケール
